src/objects/Foerderantrag__c.object
<CustomObject>
    <fields>
        <fullName>Ablehnungsgrund__c</fullName>
        <label>Ablehnungsgrund</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Anfragende_Person__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Anfragende Person</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Förderanträge</relationshipLabel>
        <relationshipName>Foerderantraege</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Beschreibung__c</fullName>
        <label>Beschreibung</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Betrag_angefragt__c</fullName>
        <label>Betrag angefragt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Betrag_genehmigt__c</fullName>
        <label>Betrag genehmigt</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Betreff__c</fullName>
        <label>Betreff</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Eingangsdatum__c</fullName>
        <defaultValue>TODAY()</defaultValue>
        <label>Eingangsdatum</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Entscheidungsdatum__c</fullName>
        <label>Entscheidungsdatum</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geld_berwiesen_am__c</fullName>
        <label>Geld überwiesen am</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Geld_berwiesen_von__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Geld überwiesen von</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Contact.Vorstands_Rolle__c</field>
                <operation>notEqual</operation>
                <value></value>
            </filterItems>
            <infoMessage>Nur ein Vorstands-Mitglied kann überweisen</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Förderanträge (Geld überwiesen von)</relationshipLabel>
        <relationshipName>Foerderantrag</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Kommentare__c</fullName>
        <label>Kommentare</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Neu</fullName>
                    <default>true</default>
                    <label>Neu</label>
                </value>
                <value>
                    <fullName>In Bearbeitung</fullName>
                </value>
                <value>
                    <fullName>Genehmigt</fullName>
                </value>
                <value>
                    <fullName>Abgelehnt</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Förderantrag</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Betreff__c</columns>
        <columns>Anfragende_Person__c</columns>
        <columns>Eingangsdatum__c</columns>
        <columns>Geld_berwiesen_am__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>FoerderantragsQ_Foerderantrag</fullName>
        <filterScope>Queue</filterScope>
        <label>Förderanträge</label>
        <queue>FoerderantragsQ</queue>
        <sharedTo>
            <allInternalUsers></allInternalUsers>
        </sharedTo>
    </listViews>
    <nameField>
        <displayFormat>FA#{YYYY}.{MM}-{000}</displayFormat>
        <label>Förderantrag Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Förderanträge</pluralLabel>
    <recordTypes>
        <fullName>Standard</fullName>
        <active>true</active>
        <label>Standard</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>